image galleries collapsing menu fixed

--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,6 @@
 #navbar {
 	/*border: 1px solid red;*/
-	width: 60%;
+	width: 70%;
 	margin: 0 auto;
 	height: 70px;
 }
@@ -19,6 +19,7 @@ nav li a:hover {
 }
 
 nav {
+
 	height: 40px;
     width: 100%;
     background: none;
@@ -31,6 +32,7 @@ nav {
    /* border-bottom: solid #d3d3d3;
     box-shadow: 10px 10px 5px #888888;*/
     color: white;
+
 	
 }
 
@@ -41,7 +43,7 @@ nav ul {
     padding: 0;
     width: 600px;
     height: 40px;
-    /*background-color: green;*/
+    
 }
 
 nav li {
@@ -94,84 +96,6 @@ nav a#pull {
     display: none;
 }
 
-
-
-/*Here the navbar will collpase in two columns*/
-
-/*@media screen and (max-width: 975px) {
-    nav { 
-        height: auto;
-    }
-    nav ul {
-        width: 100%;
-        display: block;
-        height: auto;
-    }
-    nav li {
-        width: 50%;
-        float: left;
-        position: relative;
-    }
-    nav li a {
-        border: 1px solid #576979;
-        
-    }
-    nav a {
-        text-align: left;
-        width: 100%;
-        text-indent: 25px;
-    }
-
-    nav li:last-child a {
-    border-right: 1px solid #576979  ;
-	}
-}*/
-
-/*here it will collpase to show only the barmenu*/
-/*@media only screen and (max-width : 675px) {
-    nav {
-        border-bottom: 0;
-    }
-
-    nav ul {
-        height: auto;
-        display: none;
-    }
-
-    nav a#pull {
-        display: block;
-        /*background-color: #283744;*/
-        /*width: 100%;
-        position: relative;
-    }
-
-    nav a#pull:after {
-        content:"";
-        background: url('../images/nav-icon.png') no-repeat;
-        width: 30px;
-        height: 30px;
-        display: inline-block;
-        position: absolute;
-        right: 15px;
-        top: 10px;
-    }
-}*/
-
-/*Lastly, when the screen gets smaller by 320px
- and lower the menu will be displayed vertically top to bottom.*/
-
-/*@media only screen and (max-width : 380px) {
-    nav li {
-        display: block;
-        float: none;
-        width: 100%;
-    }
-    nav li a {
-        border-bottom: 1px solid #576979;
-    }*/
-
-/*}*/
-
 .rg-gallery {
-    margin-top: 
+    margin-top: 100px;
 }
